--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">PhotoGallery</string>
     <string name="pages">Page %1$d of %2$d</string>
     <string name="default_page_string">Page 0 of 0</string>
+    <string name="search">Search</string>
+    <string name="clear_search">Clear search</string>
 </resources>
